<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="appNavigationVM" type="com.mohammedsapplication.app.modules.appnavigation.data.viewmodel.AppNavigationVM"/>
    </data>
    <LinearLayout android:id="@+id/linearGroupAP13"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical" style="@style/groupStylewhite_A700">
        <LinearLayout android:id="@+id/linearAppNavigation"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:orientation="vertical" style="@style/groupStylewhite_A700">
            <TextView android:ellipsize="end" android:gravity="start"
                android:id="@+id/txtAppNavigation"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_10pxv"
                android:layout_marginEnd="@dimen/_20pxh"
                android:layout_marginStart="@dimen/_20pxh"
                android:layout_marginTop="@dimen/_10pxv"
                android:layout_width="match_parent"
                android:singleLine="true"
                android:text="@{appNavigationVM.appNavigationModel.txtAppNavigation}"
                style="@style/txtregular20" tools:text="@string/lbl_app_navigation"/>
            <TextView android:ellipsize="end" android:gravity="start"
                android:id="@+id/txtCheckYourAppsUIFromTheBelowDemoScreensOfYourApp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_20pxh"
                android:layout_width="match_parent"
                android:singleLine="true"
                android:text="@{appNavigationVM.appNavigationModel.txtCheckYourAppsUIFromTheBelowDemoScreensOfYourApp}"
                style="@style/txtregular16" tools:text="@string/msg_check_your_app"/>
            <View android:background="@color/black_900"
                android:id="@+id/lineLine2"
                android:layout_gravity="center_horizontal"
                android:layout_height="@dimen/_1pxv"
                android:layout_marginTop="@dimen/_5pxv" android:layout_width="@dimen/_375pxh"/>
        </LinearLayout>
        <ScrollView android:clipToPadding="false"
            android:fillViewport="true"
            android:gravity="center_horizontal"
            android:id="@+id/scrollViewGroupAP12"
            android:layout_height="0dp" android:layout_weight="1" android:layout_width="match_parent">
            <LinearLayout android:id="@+id/linearGroupAP11"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:orientation="vertical" style="@style/groupStylewhite_A700">
                <LinearLayout android:id="@+id/linearIPhone11ProMaxTwo"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:orientation="vertical" style="@style/groupStylewhite_A700">
                    <TextView android:ellipsize="end"
                        android:gravity="start"
                        android:id="@+id/txtIPhone11ProMaxTwo"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/_10pxv"
                        android:layout_marginEnd="@dimen/_20pxh"
                        android:layout_marginStart="@dimen/_20pxh"
                        android:layout_marginTop="@dimen/_10pxv"
                        android:layout_width="match_parent"
                        android:singleLine="true"
                        android:text="@{appNavigationVM.appNavigationModel.txtIPhone11ProMaxTwo}"
                        style="@style/txtregular20" tools:text="@string/msg_iphone_11_pro_m"/>
                    <View android:background="@color/bluegray_400"
                        android:id="@+id/lineLine3"
                        android:layout_gravity="center_horizontal"
                        android:layout_height="@dimen/_1pxv"
                        android:layout_marginTop="@dimen/_5pxv" android:layout_width="@dimen/_375pxh"/>
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/linearIPhone11ProMaxThree"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:orientation="vertical" style="@style/groupStylewhite_A700">
                    <TextView android:ellipsize="end"
                        android:gravity="start"
                        android:id="@+id/txtIPhone11ProMaxThree"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/_10pxv"
                        android:layout_marginEnd="@dimen/_20pxh"
                        android:layout_marginStart="@dimen/_20pxh"
                        android:layout_marginTop="@dimen/_10pxv"
                        android:layout_width="match_parent"
                        android:singleLine="true"
                        android:text="@{appNavigationVM.appNavigationModel.txtIPhone11ProMaxThree}"
                        style="@style/txtregular20" tools:text="@string/msg_iphone_11_pro_m2"/>
                    <View android:background="@color/bluegray_400"
                        android:id="@+id/lineLine4"
                        android:layout_gravity="center_horizontal"
                        android:layout_height="@dimen/_1pxv"
                        android:layout_marginTop="@dimen/_5pxv" android:layout_width="@dimen/_375pxh"/>
                </LinearLayout>
                <LinearLayout android:id="@+id/linearIPhone11ProMaxFour"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:orientation="vertical" style="@style/groupStylewhite_A700">
                    <TextView android:ellipsize="end"
                        android:gravity="start"
                        android:id="@+id/txtIPhone11ProMaxFour"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/_10pxv"
                        android:layout_marginEnd="@dimen/_20pxh"
                        android:layout_marginStart="@dimen/_20pxh"
                        android:layout_marginTop="@dimen/_10pxv"
                        android:layout_width="match_parent"
                        android:singleLine="true"
                        android:text="@{appNavigationVM.appNavigationModel.txtIPhone11ProMaxFour}"
                        style="@style/txtregular20" tools:text="@string/msg_iphone_11_pro_m3"/>
                    <View android:background="@color/bluegray_400"
                        android:id="@+id/lineLine5"
                        android:layout_gravity="center_horizontal"
                        android:layout_height="@dimen/_1pxv"
                        android:layout_marginTop="@dimen/_5pxv" android:layout_width="@dimen/_375pxh"/>
                </LinearLayout>
                <LinearLayout android:id="@+id/linearIPhone11ProMaxFive"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:orientation="vertical" style="@style/groupStylewhite_A700">
                    <TextView android:ellipsize="end"
                        android:gravity="start"
                        android:id="@+id/txtIPhone11ProMaxFive"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/_10pxv"
                        android:layout_marginEnd="@dimen/_20pxh"
                        android:layout_marginStart="@dimen/_20pxh"
                        android:layout_marginTop="@dimen/_10pxv"
                        android:layout_width="match_parent"
                        android:singleLine="true"
                        android:text="@{appNavigationVM.appNavigationModel.txtIPhone11ProMaxFive}"
                        style="@style/txtregular20" tools:text="@string/msg_iphone_11_pro_m4"/>
                    <View android:background="@color/bluegray_400"
                        android:id="@+id/lineLine6"
                        android:layout_gravity="center_horizontal"
                        android:layout_height="@dimen/_1pxv"
                        android:layout_marginTop="@dimen/_5pxv" android:layout_width="@dimen/_375pxh"/>
                </LinearLayout>
                <LinearLayout android:id="@+id/linearIPhone11ProMaxTen"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:orientation="vertical" style="@style/groupStylewhite_A700">
                    <TextView android:ellipsize="end"
                        android:gravity="start"
                        android:id="@+id/txtIPhone11ProMaxTen"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/_10pxv"
                        android:layout_marginEnd="@dimen/_20pxh"
                        android:layout_marginStart="@dimen/_20pxh"
                        android:layout_marginTop="@dimen/_10pxv"
                        android:layout_width="match_parent"
                        android:singleLine="true"
                        android:text="@{appNavigationVM.appNavigationModel.txtIPhone11ProMaxTen}"
                        style="@style/txtregular20" tools:text="@string/msg_iphone_11_pro_m5"/>
                    <View android:background="@color/bluegray_400"
                        android:id="@+id/lineLine7"
                        android:layout_gravity="center_horizontal"
                        android:layout_height="@dimen/_1pxv"
                        android:layout_marginTop="@dimen/_5pxv" android:layout_width="@dimen/_375pxh"/>
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/linearIPhone11ProMaxEleven"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:orientation="vertical" style="@style/groupStylewhite_A700">
                    <TextView android:ellipsize="end"
                        android:gravity="start"
                        android:id="@+id/txtIPhone11ProMaxEleven"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/_10pxv"
                        android:layout_marginEnd="@dimen/_20pxh"
                        android:layout_marginStart="@dimen/_20pxh"
                        android:layout_marginTop="@dimen/_10pxv"
                        android:layout_width="match_parent"
                        android:singleLine="true"
                        android:text="@{appNavigationVM.appNavigationModel.txtIPhone11ProMaxEleven}"
                        style="@style/txtregular20" tools:text="@string/msg_iphone_11_pro_m6"/>
                    <View android:background="@color/bluegray_400"
                        android:id="@+id/lineLine8"
                        android:layout_gravity="center_horizontal"
                        android:layout_height="@dimen/_1pxv"
                        android:layout_marginTop="@dimen/_5pxv" android:layout_width="@dimen/_375pxh"/>
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/linearIPhone11ProMaxTwelve"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:orientation="vertical" style="@style/groupStylewhite_A700">
                    <TextView android:ellipsize="end"
                        android:gravity="start"
                        android:id="@+id/txtIPhone11ProMaxTwelve"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/_10pxv"
                        android:layout_marginEnd="@dimen/_20pxh"
                        android:layout_marginStart="@dimen/_20pxh"
                        android:layout_marginTop="@dimen/_10pxv"
                        android:layout_width="match_parent"
                        android:singleLine="true"
                        android:text="@{appNavigationVM.appNavigationModel.txtIPhone11ProMaxTwelve}"
                        style="@style/txtregular20" tools:text="@string/msg_iphone_11_pro_m7"/>
                    <View android:background="@color/bluegray_400"
                        android:id="@+id/lineLine9"
                        android:layout_gravity="center_horizontal"
                        android:layout_height="@dimen/_1pxv"
                        android:layout_marginTop="@dimen/_5pxv" android:layout_width="@dimen/_375pxh"/>
                </LinearLayout>
                <LinearLayout android:id="@+id/linearIPhone11ProMaxSix"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:orientation="vertical" style="@style/groupStylewhite_A700">
                    <TextView android:ellipsize="end"
                        android:gravity="start"
                        android:id="@+id/txtIPhone11ProMaxSix"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/_10pxv"
                        android:layout_marginEnd="@dimen/_20pxh"
                        android:layout_marginStart="@dimen/_20pxh"
                        android:layout_marginTop="@dimen/_10pxv"
                        android:layout_width="match_parent"
                        android:singleLine="true"
                        android:text="@{appNavigationVM.appNavigationModel.txtIPhone11ProMaxSix}"
                        style="@style/txtregular20" tools:text="@string/msg_iphone_11_pro_m8"/>
                    <View android:background="@color/bluegray_400"
                        android:id="@+id/lineLine10"
                        android:layout_gravity="center_horizontal"
                        android:layout_height="@dimen/_1pxv"
                        android:layout_marginTop="@dimen/_5pxv" android:layout_width="@dimen/_375pxh"/>
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/linearIPhone11ProMaxSeven"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:orientation="vertical" style="@style/groupStylewhite_A700">
                    <TextView android:ellipsize="end"
                        android:gravity="start"
                        android:id="@+id/txtIPhone11ProMaxSeven"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/_10pxv"
                        android:layout_marginEnd="@dimen/_20pxh"
                        android:layout_marginStart="@dimen/_20pxh"
                        android:layout_marginTop="@dimen/_10pxv"
                        android:layout_width="match_parent"
                        android:singleLine="true"
                        android:text="@{appNavigationVM.appNavigationModel.txtIPhone11ProMaxSeven}"
                        style="@style/txtregular20" tools:text="@string/msg_iphone_11_pro_m9"/>
                    <View android:background="@color/bluegray_400"
                        android:id="@+id/lineLine11"
                        android:layout_gravity="center_horizontal"
                        android:layout_height="@dimen/_1pxv"
                        android:layout_marginTop="@dimen/_5pxv" android:layout_width="@dimen/_375pxh"/>
                </LinearLayout>
                <LinearLayout android:id="@+id/linearIPhone11ProMaxNine"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:orientation="vertical" style="@style/groupStylewhite_A700">
                    <TextView android:ellipsize="end"
                        android:gravity="start"
                        android:id="@+id/txtIPhone11ProMaxNine"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/_10pxv"
                        android:layout_marginEnd="@dimen/_20pxh"
                        android:layout_marginStart="@dimen/_20pxh"
                        android:layout_marginTop="@dimen/_10pxv"
                        android:layout_width="match_parent"
                        android:singleLine="true"
                        android:text="@{appNavigationVM.appNavigationModel.txtIPhone11ProMaxNine}"
                        style="@style/txtregular20" tools:text="@string/msg_iphone_11_pro_m10"/>
                    <View android:background="@color/bluegray_400"
                        android:id="@+id/lineLine12"
                        android:layout_gravity="center_horizontal"
                        android:layout_height="@dimen/_1pxv"
                        android:layout_marginTop="@dimen/_5pxv" android:layout_width="@dimen/_375pxh"/>
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/linearIPhone11ProMaxEight"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:orientation="vertical" style="@style/groupStylewhite_A700">
                    <TextView android:ellipsize="end"
                        android:gravity="start"
                        android:id="@+id/txtIPhone11ProMaxEight"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/_10pxv"
                        android:layout_marginEnd="@dimen/_20pxh"
                        android:layout_marginStart="@dimen/_20pxh"
                        android:layout_marginTop="@dimen/_10pxv"
                        android:layout_width="match_parent"
                        android:singleLine="true"
                        android:text="@{appNavigationVM.appNavigationModel.txtIPhone11ProMaxEight}"
                        style="@style/txtregular20" tools:text="@string/msg_iphone_11_pro_m11"/>
                    <View android:background="@color/bluegray_400"
                        android:id="@+id/lineLine13"
                        android:layout_gravity="center_horizontal"
                        android:layout_height="@dimen/_1pxv"
                        android:layout_marginTop="@dimen/_5pxv" android:layout_width="@dimen/_375pxh"/>
                </LinearLayout>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</layout>
